chore: swaggo review
