# backend/internal/handlers/http/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/wallet
 definitions:
   EmptyResponseDTO:
     properties:
@@ -19,6 +20,21 @@ definitions:
       items:
         items:
           $ref: '#/definitions/Payment'
+        type: array
+      page_count:
+        example: 10
+        type: integer
+      page_token:
+        type: string
+    type: object
+  PagedDTO-TransactionDetail:
+    properties:
+      has_more:
+        example: false
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/TransactionDetail'
         type: array
       page_count:
         example: 10
@@ -49,6 +65,18 @@ definitions:
         - cancelled
         - pending
         example: paid
+      title:
+        example: Supermercado
+        type: string
+      type:
+        allOf:
+        - $ref: '#/definitions/PaymentType'
+        enum:
+        - expense
+        - income
+        - invoice
+        - detail
+        example: expense
       userId:
         example: realfabecker@gmail
         type: string
@@ -60,6 +88,7 @@ definitions:
     - description
     - dueDate
     - id
+    - title
     - userId
     - value
     type: object
@@ -73,6 +102,14 @@ definitions:
     - PaymentPaid
     - PaymentPending
     - PaymentCancelled
+  PaymentType:
+    enum:
+    - expense
+    - income
+    type: string
+    x-enum-varnames:
+    - PaymentTypeExpense
+    - PaymentTypeIncome
   ResponseDTO-PagedDTO-Payment:
     properties:
       code:
@@ -87,6 +124,20 @@ definitions:
         example: success
         type: string
     type: object
+  ResponseDTO-PagedDTO-TransactionDetail:
+    properties:
+      code:
+        example: 200
+        type: integer
+      data:
+        $ref: '#/definitions/PagedDTO-TransactionDetail'
+      message:
+        example: Operação realizada com sucesso
+        type: string
+      status:
+        example: success
+        type: string
+    type: object
   ResponseDTO-Payment:
     properties:
       code:
@@ -94,6 +145,20 @@ definitions:
         type: integer
       data:
         $ref: '#/definitions/Payment'
+      message:
+        example: Operação realizada com sucesso
+        type: string
+      status:
+        example: success
+        type: string
+    type: object
+  ResponseDTO-TransactionDetail:
+    properties:
+      code:
+        example: 200
+        type: integer
+      data:
+        $ref: '#/definitions/TransactionDetail'
       message:
         example: Operação realizada com sucesso
         type: string
@@ -129,6 +194,38 @@ definitions:
         example: success
         type: string
     type: object
+  TransactionDetail:
+    description: Invoice Detail information
+    properties:
+      createdAt:
+        example: "2023-04-07T16:45:30Z"
+        type: string
+      description:
+        example: Supermercado
+        type: string
+      id:
+        example: 2023050701GXEH91YBVV40C1FK50S1P0KC
+        type: string
+      title:
+        example: Supermercado
+        type: string
+      transactionId:
+        example: 2023050701GXEH91YBVV40C1FK50S1P0XD
+        type: string
+      userId:
+        example: realfabecker@gmail
+        type: string
+      value:
+        example: 200
+        minimum: 1
+        type: integer
+    required:
+    - description
+    - title
+    - transactionId
+    - userId
+    - value
+    type: object
   User:
     description: User information
     properties:
@@ -143,15 +240,81 @@ definitions:
     properties:
       AccessToken:
         type: string
+      AuthChallange:
+        type: string
+      AuthSession:
+        type: string
       RefreshToken:
         type: string
     type: object
+  WalletLoginChangeDTO:
+    properties:
+      email:
+        type: string
+      new_password:
+        minLength: 6
+        type: string
+      session:
+        type: string
+    required:
+    - email
+    - new_password
+    - session
+    type: object
+  WalletLoginDTO:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
 info:
   contact: {}
+  description: Wallet Rest API
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  title: Wallet Rest API
+  version: "1.0"
 paths:
+  /auth/change:
+    get:
+      description: Change user password
+      parameters:
+      - description: Login payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/WalletLoginChangeDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ResponseDTO-UserToken'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Change user password
+      tags:
+      - Auth
   /auth/login:
     get:
       description: Get user login by e-mail
+      parameters:
+      - description: Login payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/WalletLoginDTO'
       produces:
       - application/json
       responses:
@@ -166,28 +329,9 @@ paths:
       summary: Get user login by e-mail
       tags:
       - Auth
-  /users/profile:
+  /transactions:
     get:
-      description: Get user information by e-mail
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ResponseDTO-User'
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      security:
-      - ApiKeyAuth: []
-      summary: Get user by e-mail
-      tags:
-      - Users
-  /wallet/payments:
-    get:
-      description: List user payments
+      description: List user transactions
       parameters:
       - description: Number of records
         in: query
@@ -216,11 +360,11 @@ paths:
           description: Internal Server Error
       security:
       - ApiKeyAuth: []
-      summary: List user payments
+      summary: List user transactions
       tags:
-      - Payments
+      - Transactions
     post:
-      description: Create a new payment record
+      description: Create a new transaction record
       parameters:
       - description: Payment payload
         in: body
@@ -241,11 +385,11 @@ paths:
           description: Internal Server Error
       security:
       - ApiKeyAuth: []
-      summary: Create a payment
+      summary: Create a transaction
       tags:
-      - Payments
+      - Transactions
     put:
-      description: Update/Create a payment record
+      description: Update/Create a transaction record
       parameters:
       - description: Payment id
         in: path
@@ -271,12 +415,12 @@ paths:
           description: Internal Server Error
       security:
       - ApiKeyAuth: []
-      summary: Put a payment
+      summary: Put a transaction
       tags:
-      - Payments
-  /wallet/payments/{id}:
+      - Transactions
+  /transactions/{id}:
     delete:
-      description: Delete payment
+      description: Delete transaction
       parameters:
       - description: Payment id
         in: path
@@ -296,11 +440,11 @@ paths:
           description: Internal Server Error
       security:
       - ApiKeyAuth: []
-      summary: Delete payment
+      summary: Delete transaction
       tags:
-      - Payments
+      - Transactions
     get:
-      description: Get payment by id
+      description: Get transaction by id
       parameters:
       - description: Payment id
         in: path
@@ -320,7 +464,119 @@ paths:
           description: Internal Server Error
       security:
       - ApiKeyAuth: []
-      summary: Get payment by id
+      summary: Get transaction by id
       tags:
-      - Payments
+      - Transactions
+  /transactions/{id}/detail:
+    post:
+      description: Create a new transaction detail record
+      parameters:
+      - description: TransactionDetail payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/TransactionDetail'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ResponseDTO-TransactionDetail'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Create a transaction detail
+      tags:
+      - Transactions
+  /transactions/{id}/details:
+    get:
+      description: List transaction details
+      parameters:
+      - description: Number of records
+        in: query
+        name: limit
+        required: true
+        type: number
+      - description: Pagination token
+        in: query
+        name: page_token
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ResponseDTO-PagedDTO-TransactionDetail'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: List transaction details
+      tags:
+      - Transactions
+  /transactions/{transactionId}/details/{detailId}:
+    get:
+      description: Get transaction detail by id
+      parameters:
+      - description: Transaction id
+        in: path
+        name: transactionId
+        required: true
+        type: string
+      - description: Detail id
+        in: path
+        name: detailId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ResponseDTO-TransactionDetail'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Get transaction detail by id
+      tags:
+      - Transactions
+  /users/profile:
+    get:
+      description: Get user information by e-mail
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ResponseDTO-User'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Get user by e-mail
+      tags:
+      - Users
+securityDefinitions:
+  ApiKeyAuth:
+    description: Type 'Bearer ' and than your API token
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
